<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="io.orkk.vietnam.screen.intro.initial.InitialSettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_content1"
            style="@style/TextAppearance.Vietnam.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_setting_content1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_golf_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_spinner_background"
            android:padding="10dp"
            android:popupBackground="@drawable/shape_spinner_background"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content1"
            app:setGolfClubList="@{viewModel.clubInfoFetchedList}" />

        <TextView
            android:id="@+id/tv_content2"
            style="@style/TextAppearance.Vietnam.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/initial_setting_content2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_golf_course" />

        <TextView
            android:id="@+id/tv_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_setting_content3"
            android:textColor="@color/color_red"
            android:visibility="@{viewModel.isEnableSetClubInfo() ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/ButtonTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isEnableSetClubInfo()}"
            android:onClick="@{() -> viewModel.setGolfClubInfo()}"
            android:text="@string/common_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>